@@ -5,12 +5,12 @@ import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.data.redis.core.ZSetOperations;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import site.moamoa.backend.web.dto.base.KeywordDTO;
+import site.moamoa.backend.config.redis.RedisKey;
+import site.moamoa.backend.converter.KeywordConverter;
+import site.moamoa.backend.web.dto.response.KeywordResponseDTO;
 
-import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -21,25 +21,22 @@ public class KeywordQueryServiceImpl implements KeywordQueryService {
 
     //동네 인기 검색어 리스트 1위~10위까지 (조회수 기준)
     @Override
-    public List<KeywordDTO> popularSearchRankList(String townName) {
+    public KeywordResponseDTO.GetKeywords popularSearchRankList(String townName) {
         ZSetOperations<String, String> zSetOperations = redisTemplate.opsForZSet();
-        Set<ZSetOperations.TypedTuple<String>> typedTuples = zSetOperations.reverseRangeWithScores("town::" + townName, 0, 9);  //score순으로 10개 보여줌
-        return Objects.requireNonNull(typedTuples).stream()
-                .map(typedTuple -> KeywordDTO.builder()
-                        .keyword(typedTuple.getValue())
-                        .build())
-                .collect(Collectors.toList());
+        Set<ZSetOperations.TypedTuple<String>> typedTuples = zSetOperations.reverseRangeWithScores(RedisKey.TOWN_KEYWORD_COUNT_KEY_PREFIX + townName, 0, 9);  //score순으로 10개 보여줌
+
+        return KeywordConverter.toGetKeywords(
+                Objects.requireNonNull(typedTuples).stream().map(typedTuple -> KeywordConverter.toKeywordDTO(typedTuple.getValue())).toList()
+        );
     }
 
     //개인 최근 검색어 리스트 1위~10위까지
     @Override
-    public List<KeywordDTO> recentSearchRankList(Long memberId) {
-        ZSetOperations<String, String> ZSetOperations = redisTemplate.opsForZSet();
-        Set<ZSetOperations.TypedTuple<String>> typedTuples = ZSetOperations.reverseRangeWithScores("member::" + memberId, 0, 9);  //score순으로 10개 보여줌
-        return Objects.requireNonNull(typedTuples).stream()
-                .map(typedTuple -> KeywordDTO.builder()
-                        .keyword(typedTuple.getValue())
-                        .build())
-                .collect(Collectors.toList());
+    public KeywordResponseDTO.GetKeywords recentSearchRankList(Long memberId) {
+        ZSetOperations<String, String> zSetOperations = redisTemplate.opsForZSet();
+        Set<ZSetOperations.TypedTuple<String>> typedTuples = zSetOperations.reverseRangeWithScores(RedisKey.MEMBER_KEYWORD_KEY_PREFIX + memberId, 0, 9);  //score순으로 10개 보여줌
+        return KeywordConverter.toGetKeywords(
+                Objects.requireNonNull(typedTuples).stream().map(typedTuple -> KeywordConverter.toKeywordDTO(typedTuple.getValue())).toList()
+        );
     }
 }
